<resources>
    <string name="app_name">Controle Financeiro</string>
    <string name="title_activity_principal">Principal</string>
    <string name="lb_campo_ola_mundo">Controle Financeiro</string>
    <string name="title_activity_clientes">clientes</string>
    <string name="title_activity_cliente">Cliente</string>
    <string name="lb_nome_cliente">Nome:</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="title_activity_produtos">produtos</string>
    <string name="title_activity_principalq">Principalq</string>
    <string name="lb_item_menu_principal">Principal</string>
    <string name="lb_item_menu_produtos">Produtos</string>
    <string name="lb_item_menu_clientes">Clientes</string>
    <string name="lb_item_menu_fornecedores">Fornecedores</string>
    <string name="title_activity_produto">Produto</string>
    <string name="title_activity_menu_drawer">menu_drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="lb_produtos_lista">Lista de Produtos</string>
    <string name="lb_clientes_lista">Lista de Clientes</string>
    <string name="lb_produto_nome">Nome:</string>
    <string name="lb_produto_fornecedor">Fornecedor:</string>
    <string name="lb_botao_gravar">Gravar</string>
    <string name="hint_cliente_nome">Preencha o nome do cliente</string>
    <string name="lb_cliente_cpf">CPF:</string>
    <string name="hint_cliente_cpf">Insira o CPF</string>
    <string name="lb_txt_produto_fornecedor" >Fornecedor:</string>
    <string name="hint_txt_produto_fornecedor">Insira o Fornecedor</string>
</resources>


